ChangeLog PeerGuardian Linux (pgl)

pgl 2.1~WIP The GUI release

  [jre]
  * started work on a new GUI (C++, Gtk, glade, dbus)
  * moved old unfinished Qt GUI to pgl-gui.qt

-- jre <jre-phoenix@users.sourceforge.net>  Sun, 02 Jan 2011 19:09:53 +0100


pgl 2.0.4~WIP

  [ jre ]
  * fixed automatic whitelisting of local FORWARD traffic. Now really Closes SF
    Bug #3057107. Thx athanasius!
  * extended kernel module loading
  * iptables handling:
    - fixed: check for already whitelisted LAN now copes with all subnetmasks
    - improved logging
    - be more verbose on iptables insertion
    - minor bugfixes
    - execute old iptables remove script on start in case it still exists (it
      shouldn't!)
  * blocklist management:
    - also merge the local blocklists in MASTER_BLOCKLIST (next to the
      automatically handled remote blocklists). pgld only loads this list.
      - Fixes problems with removed/added local blocklists on "reload".
      - Quicker "reload", but excess usage of harddisk space
      - simplified code and output of test_ipblocking
    - local blocklists mustn't have space in their names any more!
    - added option force-restart, that forces to rebuild master blocklist. Added
      documentation for force-reload and force-update.
  * fixed use of pglcmd option #1 ($1) in pglcmd.lib
  * code cleanups:
    - use a separate variable for the IPv4 regular expression
    - moved LIST_NAME2LIST_URL from pglcmd.lib to debian/postinst
    - replaced ( ... ) command grouping with { ... ; } or omitted it completely
      for efficieny issues

-- jre <jre-phoenix@users.sourceforge.net>  WIP


pgl 2.0.3

  [ jre ]
  * remember inserted iptables for later removal
  * fixed iptables whitelisting of IP ranges in the FORWARD chain (incorrect IFS
    setting). Closes SF Bug #3057107
  * fixed iptables chain activation for specified interfaces in the FORWARD
    chain. Closes SF Bug #3057110
  * reenabled pgld's loading zip compressed blocklists
